# composer

./: .dockerignore  .env  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PLAN.md  PLAN_ALIASES.md  README.md  TODO.md  build.sh  compose.yml  install.sh  justfile  release-please-config.json  say_hello.sh  test.sh
.claude/skills/ship/: SKILL.md
.github/workflows/: release-please.yml  release.yml
docs/: _config.yml  aliases.md  docker.md  index.md  install.md
docs/.well-known/skills/default/: skill.md
docs/_includes/: head_custom.html
docs/assets/css/: just-the-docs-dark.scss
examples/: certificate-monitor.yml
src/: aliases.bash  certificate_monitor.rs  compose.rs  compose_types.rs  container_monitor.rs  guards.bash  install_commands.rs  main.rs  scheduler.rs  show_status.rs  status.rs  status_command.rs  status_server.rs  system_monitor.rs
