[package]
name = "composer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
cron = "0.12"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.33"
tokio = { version = "1", features = ["rt", "macros", "process", "time"] }
