[package]
name = "composer"
version = "0.8.0"
edition = "2021"

[[bin]]
name = "test_metrics"
path = "src/bin/test_metrics.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
byte-unit = "5"
chrono = "0.4"
chrono-tz = "0.10"
clap = { version = "4", features = ["derive", "env"] }
cron = "0.12"
env_logger = "0.11"
hostname = "0.4"
humantime = "2.1.0"
log = "0.4"
metrics = "0.24.2"
notify = "8"
metrics-exporter-opentelemetry = "0.1.2"
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = [
    "http-proto",
    "trace",
    "metrics",
    "logs",
    "internal-logs",
] }
pem = "3"
prettytable-rs = { package = "prettytable-rs", version = "0.10", features = [
    "win_crlf",
] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.33"
sysinfo = "0.33"
term = "0.7"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "time",
    "net",
] }
tokio-util = "0.7"
url = "2"
x509-parser = "0.16"
